- Rebuild an endpoint for adding reviews to the company's offer.
- Create an endpoint for downloading the company's review list.