@@ -1,19 +1,24 @@
 package com.m4zek.backend.service;
 
 import com.m4zek.backend.exception.CompanyNotFoundException;
+import com.m4zek.backend.exception.ReviewBadRequestException;
 import com.m4zek.backend.exception.ReviewExistsException;
+import com.m4zek.backend.exception.UserNotFoundException;
+import com.m4zek.backend.mapper.ReviewMapper;
 import com.m4zek.backend.model.CompanyOffer;
 import com.m4zek.backend.model.Review;
 import com.m4zek.backend.model.User;
-import com.m4zek.backend.model.dto.read.ReviewResponse;
+import com.m4zek.backend.model.dto.read.UserReviewResponse;
 import com.m4zek.backend.model.dto.write.ReviewRequest;
 import com.m4zek.backend.repository.CompanyOfferRepository;
 import com.m4zek.backend.repository.ReviewRepository;
 import com.m4zek.backend.repository.UserRepository;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageImpl;
+import org.springframework.data.domain.Pageable;
 import org.springframework.stereotype.Service;
 
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Service
 public class ReviewService {
@@ -30,17 +35,22 @@ public class ReviewService {
     }
 
 
-    public ReviewResponse createNewReview(ReviewRequest reviewRequest) {
+    public UserReviewResponse createNewReview(ReviewRequest reviewRequest) {
 
         if(reviewRepository.existsByUserIdAndCompanyOfferId(reviewRequest.getAuthor_id(), reviewRequest.getCompany_offer_id())){
             throw new ReviewExistsException("You can only add one review to an offer!");
         }
 
         User author = userRepository.findById(reviewRequest.getAuthor_id())
-                .orElseThrow(() -> new RuntimeException("Author not found"));
+                .orElseThrow(() -> new UserNotFoundException("Author not found"));
 
         CompanyOffer companyOffer = companyOfferRepository.findById(reviewRequest.getCompany_offer_id())
                 .orElseThrow(() -> new CompanyNotFoundException("Company offer not found"));
+
+        if(companyOffer.getReservations().stream()
+                .noneMatch(reservation -> reservation.getUser().equals(author))){
+            throw new ReviewBadRequestException("Cannot add review without reservation!");
+        }
 
         Review savedReview = this.reviewRepository.save(new Review(
                 reviewRequest.getComment(),
@@ -49,14 +59,18 @@ public class ReviewService {
                 author
         ));
 
-        return savedReview.toReadModel();
+        return ReviewMapper.reviewsToUserReviewResponse(savedReview);
     }
 
-    public List<ReviewResponse> readAllCompanyOfferReviews(long company_offer_id) {
-        return this.reviewRepository.readAllByCompanyOfferId(company_offer_id)
-                .stream()
-                .map(Review::toReadModel)
-                .collect(Collectors.toList());
+
+
+    public Page<UserReviewResponse> getCompanyReviews(Pageable pageable, int company_id) {
+        Page<Review> companyReviews = this.reviewRepository.findAllByCompanyId(company_id, pageable);
+        List<UserReviewResponse> userReviewResponses = companyReviews.stream()
+                .map(ReviewMapper::reviewsToUserReviewResponse)
+                .toList();
+        return new PageImpl<>(userReviewResponses, pageable, companyReviews.getTotalElements());
     }
+
 
 }
